--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,16 @@
   publish = ".next"
 
 [build.environment]
-  NODE_VERSION = "18"
-  NPM_VERSION = "10"
+  NODE_VERSION = "18.20.8"
+  NPM_VERSION = "10.9.3"
+  NODE_ENV = "production"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
 [build.processing]
-  skip_processing = false 
+  skip_processing = false
+
+# Force specific Node.js version
+[context.production.environment]
+  NODE_VERSION = "18.20.8" 
