--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:netlify": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
