--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.48.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
@@ -69,7 +70,6 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.0"
   }
 }
