--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "google-auth-library": "^10.2.1",
     "googleapis": "^155.0.1",
     "lucide-react": "^0.400.0",
+    "mercadopago": "2.8.0",
     "next": "15.4.6",
     "papaparse": "^5.4.1",
     "react": "19.1.0",
