--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.400.0",
     "mercadopago": "2.8.0",
     "next": "15.4.6",
+    "openai": "^4.28.4",
     "papaparse": "^5.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
