--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@hello-pangea/dnd": "@hello-pangea/dnd@beta",
+    "@hello-pangea/dnd": "file:@hello-pangea/dnd@beta",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
