--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
+    "critters": "0.0.23",
     "date-fns": "^3.0.6",
     "firebase": "^10.14.1",
     "framer-motion": "^11.0.0",
