--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && npm run build"
+  command = "npm ci --legacy-peer-deps && npm run build"
   publish = ".next"
 
 [build.environment]
@@ -16,4 +16,4 @@
 
 # Force specific Node.js version
 [context.production.environment]
-  NODE_VERSION = "18.20.8" 
+  NODE_VERSION = "18.20.8"
