--- a/package.json
+++ b/package.json
@@ -62,11 +62,9 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-a11y": "^9.1.2",
-    "@storybook/addon-docs": "^9.1.2",
-    "@storybook/addon-onboarding": "^9.1.2",
-    "@storybook/addon-vitest": "^9.1.2",
-    "@storybook/nextjs": "^9.1.2",
+    "@storybook/addon-a11y": "8.6.14",
+    "@storybook/addon-docs": "8.6.14",
+    "@storybook/nextjs": "8.6.14",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.2",
     "@types/jest": "^29.5.8",
@@ -77,13 +75,13 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "eslint-plugin-storybook": "^9.1.2",
+    "eslint-plugin-storybook": "0.11.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "storybook": "^9.1.2",
+    "storybook": "8.6.14",
     "tailwindcss": "^3.4.0"
   }
 }
