--- a/.npmrc
+++ b/.npmrc
@@ -5,4 +5,7 @@ production=false
 save-exact=true
 
 # Ensure npm uses the correct registry
-registry=https://registry.npmjs.org/ 
+registry=https://registry.npmjs.org/
+
+# Specify npm version for Netlify
+npm-version=10.9.3
