--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "cmdk": "^1.1.1",
     "critters": "0.0.23",
     "date-fns": "^3.0.6",
-    "firebase": "^10.14.1",
+    "firebase": "12.3.0",
     "framer-motion": "^11.0.0",
     "google-auth-library": "^10.2.1",
     "googleapis": "^155.0.1",
     "lucide-react": "^0.400.0",
     "mercadopago": "2.8.0",
-    "next": "15.4.6",
+    "next": "15.5.3",
     "openai": "^4.28.4",
     "papaparse": "^5.4.1",
     "react": "19.1.0",
